--- a/src/scoped.css
+++ b/src/scoped.css
@@ -477,13 +477,11 @@ h6 {
 .mode-hidden,
 .hide-chapters .chapters,
 .hide-panels .panel,
-.hide-panels-except-play .panel {
+.hide-panels-except-play.act-pause .panel,
+.hide-panels-except-play.not-used.act-loading .panel {
     display : none;
 }
 
-.act-play.hide-panels-except-play .panel {
-    display : flex;
-}
 
 .mode-compact.show-main #pagemain {
     flex : 0 0 auto;
