CSS regressions, and will do remaining later
Annotations in a ticker as in SoundCloud #76

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -320,7 +320,7 @@ aside.ticker a.active-cue {
     color : inherit !important; /* I know */
 }
 
-aside a.active-cue span {
+aside.ticker a.active-cue span {
     display : inline-block;
 }
 
