button background should be reseted as "transparent"

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -52,7 +52,7 @@ a, button {
     text-decoration : none;
 }
 button {
-    background : var(--cpu-background);
+    background : transparent;
 }
 
 svg {
