--- a/src/scoped.css
+++ b/src/scoped.css
@@ -504,7 +504,8 @@ aside a, h6, .cue time
 .hide-panels .panel,
 .hide-panels-title h6,
 .hide-panels-except-play .panel,
-.media-streamed #link {
+.media-streamed #link, 
+.media-streamed #line {
 	display : none;
 }
 
