Add option to hide time-line
Share functions on streaming should be different #83

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -501,6 +501,7 @@ aside a, h6, .cue time
 
 .mode-hidden,
 .hide-chapters .chapters,
+.hide-timeline #line,
 .hide-panels .panel,
 .hide-panels-title h6,
 .hide-panels-except-play .panel,
