--- a/src/scoped.css
+++ b/src/scoped.css
@@ -74,6 +74,12 @@ b, strong, h5 a {
 	font-weight: bold;
 }
 
+ul, li {
+   margin:0;
+   padding: 0;
+   text-indent: 0;
+   list-style-type: none;
+}
 
 [src=''] {
     visibility: hidden;
