--- a/_includes/no_component_message.html
+++ b/_includes/no_component_message.html
@@ -1,7 +1,8 @@
 --><!-- fallback messages for browsers without webcomponents -->
 <div class="cpu-audio-without-webcomponents too-old">
-    <h2>Your browser DOESN'T support WebComponent fairly enough.</h2>
+    <h2>Player didn't start (yet ?)</h2>
     <p>
+    	Your browser is loading very slowly, or doesn't support WebComponent fairly enough.
         Following examples are <strong>not fully functionnal</strong>, as the interface is not shown and the browser display its native player. This is intentional.<br />
         Only the hash-links functions works.
     </p>
