--- a/src/scoped.css
+++ b/src/scoped.css
@@ -106,13 +106,19 @@ a {
 
 .act-loading #loading,
 .act-play #play,
-.act-standby #pause,
+.act-glow #pause,
 .act-pause #pause {
 	display : block;
 }
 
-.act-standby #pause {
-	animation : pulse1 2s infinite;
+.act-glow #pause {
+	animation : glow 2s infinite;
+}
+
+@keyframes glow {
+	0%     {opacity : 0.5;}
+	50%     {opacity : 1;}
+	100%     {opacity : 0.5;}
 }
 
 .show-share #pageshare,
@@ -125,30 +131,19 @@ a {
 .act-loading #loading circle {
 	fill : #777;
 	opacity : 1;
-}
-
-.act-loading #loading circle:nth-child(1) {
-	  animation: pulse0 2s infinite;
+	animation: pulse 2s infinite;
 }
 
 .act-loading #loading circle:nth-child(2) {
-	  animation: pulse1 2s infinite;
+	animation-delay:0.5s;
 }
 
 .act-loading #loading circle:nth-child(3) {
-	  animation: pulse2 2s infinite;
+	animation-delay:1s;
 }
 
-@keyframes pulse0 {
-	17%     {opacity : 0;}
-}
-
-@keyframes pulse1 {
+@keyframes pulse {
 	50%     {opacity : 0;}
-}
-
-@keyframes pulse2 {
-	83%     {opacity : 0;}
 }
 
 #poster {
