--- a/src/scoped.css
+++ b/src/scoped.css
@@ -134,11 +134,11 @@ a {
 	animation: pulse 2s infinite;
 }
 
-.act-loading #loading circle:nth-child(2) {
+#loading circle:nth-child(2) {
 	animation-delay:0.5s;
 }
 
-.act-loading #loading circle:nth-child(3) {
+#loading circle:nth-child(3) {
 	animation-delay:1s;
 }
 
