Create a "no possible action" mode for lonesome <cpu-controller>
A controller without a player will mangle its interface #91

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -39,6 +39,10 @@
 				opacity var(--cpu-background-transitions);
 }
 
+.show-no main {
+	visibility : hidden;
+}
+
 main {
 	display : flex;
 	overflow : hidden;
