Adding `--cpu-focus-background` and `--cpu-focus-color` variables
Swapping background and color should force opacity to 1 #99

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -37,6 +37,8 @@
 				color var(--cpu-color-transitions),
 				background-color var(--cpu-background-transitions),
 				opacity var(--cpu-background-transitions);
+	--focus-bg : var(--cpu-focus-background, var(--cpu-color));
+	--focus-cl : var(--cpu-focus-color, var(--cpu-background));
 }
 
 .show-no main {
@@ -65,8 +67,8 @@ svg {
 }
 
 a:hover, a:focus, button:hover, button:focus {
-	color : var(--cpu-background);
-	background : var(--cpu-color);
+	color : var(--focus-cl);
+	background : var(--focus-bg);
 }
 
 i, em {
@@ -314,7 +316,7 @@ aside.ticker a.active-cue span {
 }
 
 .with-preview {
-	color: var(--cpu-background) !important;
+	color: var(--focus-cl) !important;
 	background : white !important;
 }
 
@@ -373,8 +375,8 @@ aside.ticker a.active-cue span {
 }
 
 #pageshare a:hover, #pageshare a:focus, #pageshare div:hover {
-	color : var(--cpu-background);
-	background : var(--cpu-color);
+	color : var(--focus-cl);
+	background : var(--focus-bg);
 }
 
 #pageshare svg {
@@ -456,8 +458,8 @@ h6 {
 	padding : 2px
 }
 .active-cue {
-	background : var(--cpu-color);
-	color : var(--cpu-background) !important; /* dirty but fastest */
+	background : var(--focus-cl);
+	color : var(--focus-bg) !important; /* dirty but fastest */
 }
 
 .cue strong {
