Revert "Proof of concept for a ticker on highlighted point"
This reverts commit ba29798ccc5019010fa3d1da7abd9f6465afb4a1.

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -453,7 +453,7 @@ h6 {
 	text-align : right;
 }
 
-aside a, h6, .cue time, .ticker, .ticker *
+aside a, h6, .cue time
 {
 	font-size : var(--cpu-font-small-size);
 }
