An attempt to rework the chapter editor. With injectable css
Add chapter name on pointer ? #95
Annotations in a ticker as in SoundCloud #76

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -176,11 +176,12 @@ a {
 	flex : 1 1 auto;
 	position : relative;
 }
+/*
 #about {
 	overflow : hidden;
 	display:flex;
 	flex-direction : column;
-}
+}*/
 #title {
 	overflow: hidden;
 	text-overflow : '…';
