adding a class `nocuetime` for panels
Panels should have possibility to not show time for points #106
Add a tag attribute to inject annotations #66

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -460,6 +460,10 @@ h6 {
 	text-align : right;
 }
 
+.nocuetime time {
+	display : none;
+}
+
 aside a, h6, .cue time , aside.ticker * /*, #infoline, #infoline * */
 {
 	font-size : var(--cpu-font-small-size);
