--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <li><a href="FEATURES">Features</a></li>
     <li><a href="INSTALL">Install</a></li>
     <li><a href="API">API</a></li>
-    <li><a href="LIVE">Live conf.</a></li>
+    <li><a href="LIVE">Config helper</a></li>
     <li><a href="TROUBLESHOOTING">Troubles</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/blob/master/CONTRIBUTING.md">Contribute</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/">Code</a></li>
