A new act is created : "buffer"
Do not change color when changing mode play→loading→play #114

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -4,7 +4,7 @@
   contain: content; 
 }
 
-.act-play {
+.act-play, .act-buffer {
 	--cpu-background : var(--cpu-playing-background);
 	--cpu-color : var(--cpu-playing-color);
 }
