--- a/src/scoped.css
+++ b/src/scoped.css
@@ -105,7 +105,6 @@ a {
 }
 
 .act-loading #loading,
-.act-buffer #loading,
 .act-play #play,
 .act-glow #pause,
 .act-pause #pause {
@@ -322,7 +321,7 @@ aside.ticker a.active-cue span {
 }
 */
 
-.act-loading #loadingline {
+.act-loading #loadingline #loadingline {
 	background : repeating-linear-gradient(45deg, var(--cpu-color) 0, var(--cpu-background) 15px, var(--cpu-color) 30px);
 	  background-size: 200% 200%;
 	animation: loadingline 1s linear infinite;
