--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
     <li><a href="https://github.com/dascritch/cpu-audio/">Code</a></li>
 </ul>
 <p>Crafted with ♥ from Toulouse, France, for <a href="http://cpu.pm">CPU radio show</a></p>
-<script src="./dist/cpu-audio.js" async></script>
+<script src="./build/cpu-audio.js" async></script>
 <style type="text/css">
     h1 {
         word-break: keep-all;
